[project]
name = "rl-tic-tac-toe-github"
version = "0.1.0"
description = ""
authors = [
    {name = "jie",email = "51790592@qq.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
